# GradeBench

./: .env.bak  .env.example  .gitignore  CLAUDE.md  ENCRYPTED_FIELDS_UPDATE.md  README.md  cleanup_libraries.sh  copy_assets.py  django_shell_test.py  manage.py  monkey_patch_admin.py  pyproject.toml  run.sh  setup.sh  test_django_shell.py  test_group_category_create.py
canvas/: models.py
core/: admin.py  apps.py  async_utils.py  auth_async.py  db.py  middleware.py  mixins.py  models.py  pipeline.py  urls.py  views.py
core/admin/: nonce.py
core/migrations/: 0001_initial.py  0002_alter_githubtoken_token_and_more.py  0002_team_canvas_course_team_canvas_group_id_and_more.py  0002_userprofile_github_avatar_url.py  0003_githubtoken_team_alter_userprofile_options_and_more.py  0003_remove_integrations.py  0003_userprofile_timezone.py  0004_calendarevent.py  0004_delete_repository.py  0004_team_canvas_group_set_id_team_canvas_group_set_name_and_more.py  0005_alter_professorprofile_options_and_more.py  0005_team_taiga_project.py  0006_alter_studentprofile_user_profile_student.py  0006_team_github_repo_name.py  0007_migrate_student_profiles.py  0007_remove_team_github_repo_name.py  0008_team_github_repo_name.py  0009_add_student_avatar.py  0010_add_student_avatar_url.py  0011_alter_team_options_alter_team_canvas_group_id_and_more.py  0012_professorprofile_created_at_and_more.py  0013_alter_githubtoken_token_and_more.py
core/templatetags/: dict_filters.py  user_timezone.py
core/views/: __init__.py  auth.py  calendar.py  github.py  wizard.py
custom_social_django/: apps.py
custom_social_django/admin/: __init__.py
dev_docs/: Modal-component.md  Progress-bars.md  Table-component.md  bootstrap5.md  canvas_course_api.md  canvas_flow.md  canvas_team_wizard_spec.md  extrernal_API_validation.md  high_level.md  model_overview.html  standardize_style.md  structure.md  student_management_flow.md
dev_docs/api_tests/: canvas_groups_test.py  test_canvas_api.py  test_canvas_groups_fixed.py  test_group_sync.py
dev_docs/canvas/: Canvas_Group_Phase3.md  Canvas_Group_Sync.md  assignment-quizz-rubric-api.md  canvas_push_endpoints_guide.md  (+5 more)
git_providers/: __init__.py  admin.py  apps.py  urls.py
gradebench/: asgi.py  settings.py  urls.py  wsgi.py
integrations/: admin.py  apps.py  models.py  models_redesign.py  urls.py
lms/: __init__.py  admin.py  apps.py  urls.py  utils.py  views.py
processes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
project_mgmt/: __init__.py  admin.py  apps.py  urls.py
taiga/: models.py
templates/: 404.html  base.html  base_dashboard.html  styleguide.html
users/: admin.py  apps.py  models.py  signals.py  urls.py  utilities.py  views.py
(+231 files in other folders)
