[project]
name = "gradebench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "social-auth-app-django>=5.4.0", # For GitHub authentication
    "django-environ>=0.11.2", # For environment variables
    "databases[sqlite]>=0.8.0", # Async database support
    "asgiref>=3.7.2", # ASGI utilities
    "httpx>=0.25.2", # Async HTTP client
    "uvicorn>=0.34.2",
    "pillow>=11.2.1",
    "starlette>=0.46.2",
    "pyclean>=3.1.0",
    "django-jazzmin>=3.0.1",
    "cleanpy>=0.5.1",
    "python-dotenv>=1.1.0",
    "django-encrypted-model-fields>=0.6.5",
    "icalendar>=6.3.0",
    "pytz>=2025.2",
    "pip>=25.1.1",
    "ruff>=0.11.9",
    "django-bootstrap5>=25.1",
    "django-formtools>=2.5.1",
    "django-select2>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"
